--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="footer" style="text-align: center;background: #2c3e50;padding-top: 30px;color: white"></div>
       </div>
     </div>
-      	<canvas class="live2d" id="live2d" width="300" height="800"></canvas>
+      	<canvas class="live2d hidden-xs hidden-sm" id="live2d" width="200" height="200"></canvas>
   </body>
   <script src = "js/jquery.min.js"></script>
   <script src = "js/typed.js"></script>
