--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <script src = "js/typed.js"></script>
   <script src = "js/gitblog.js"></script>
   <script src="js/LAppDefine.js"></script>
+  <script>InitLive2D();</script>
   <script src="js/live2d.min.js"></script>
   <script>
       $(function(){ 
