--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/home.css">
   </head>
-  <body >
+  <body onload="InitLive2D()">
     <label class="navi-button">MENU</label>
     <input type="text" class="search-input" placeholder="回车搜索">
     <img src="images/search.svg" class="search">
@@ -51,7 +51,6 @@
   <script src = "js/typed.js"></script>
   <script src = "js/gitblog.js"></script>
   <script src="js/LAppDefine.js"></script>
-  <script>InitLive2D();</script>
   <script src="js/live2d.min.js"></script>
   <script>
       $(function(){ 
