--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="page_header" ></div>
       <div class="author">
         <div class="head">
-          <img src="images/avatar.jpg" class="img-responsive img-circle">
+          <img src="images/avatar.jpg" class="img-responsive img-circle" style="width: 130px;height: 124px;">
         </div>
         <h3 class="name" id="title"></h3>
         <p class="name" id="instruction"></p>
@@ -62,7 +62,7 @@
         $('.main_content').css("transform","translateY(0)");
         
         $("#changerificwordspanid").typed({
-          strings: ["good", "happy", "healthy", "tall"],
+          strings: ["good", "happy", "healthy"],
           typeSpeed: 100,
           startDelay: 10,
           showCursor: true,
